--- a/frontend/src/components/views/Explainer/Explainer.module.scss
+++ b/frontend/src/components/views/Explainer/Explainer.module.scss
@@ -10,23 +10,21 @@
 @import "@/scss/variables";
 @import "@/scss/utils";
 
-.container {
-  display: flex;
-  flex-direction: column;
-  gap: 1em;
-}
-
 .explainer {
+  overflow: hidden;
+
   ul {
     list-style: none;
     margin: 0;
-    padding: 1rem;
-    padding-left: 0.5rem;
-    padding-bottom: 0;
+    padding: 0;
 
     li {
       display: flex;
       margin-bottom: 1rem;
+
+      &:last-of-type {
+        margin-bottom: 0;
+      }
     }
   }
 }
